<resources>
    <string name="app_name">豆瓣</string>
    <string name="story">收藏</string>
    <string name="gift">福利</string>
    <string name="day_mode">日间模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="exit">轻轻退出</string>
    <string name="made_by_qichaoqun">made by qichaoqun</string>
    <string name="qichaoqun">qichaoqun</string>
    <string name="movie">电影</string>
    <string name="animation">动画</string>
    <string name="tv">电视剧</string>
    <string name="top250">top250</string>
    <string name="classify">分类</string>
    <string name="no_content">加载的内容为空，请重新加载。。</string>
    <string name="error">程序加载出错，请稍后重试。。。</string>
    <string name="director">导演：%s</string>
    <string name="cast">主演：%s</string>
    <string name="average">%s分</string>
    <string name="unknown">未知</string>
    <string name="loading_tips">正在拼命加载中...</string>
    <string name="loading_with_life">正在拼命加载中</string>
    <string name="detail_year">年份：%s</string>
    <string name="detail_country">地区：%s</string>
    <string name="detail_type">类型：%s</string>
    <string name="detail_director">导演</string>
    <string name="detail_cast">主演</string>
    <string name="summary">简介</string>
    <string name="works">作品</string>
    <string name="more_works">浏览更多作品</string>
    <string name="detail_summary">\u3000\u3000%s</string>
    <string name="save">保存</string>
    <string name="favorite_tip1">收藏出现错误 , 请重试</string>
    <string name="favorite_tip2">取消收藏出现错误 , 请重试</string>
    <string name="favorite_tip3">请等待加载完后再收藏</string>
    <string name="error_tips3">网络出错，请稍后再试。。</string>
    <string name="error_tips">查询不到相应的数据。。</string>
    <string name="no_data_tips">没有数据</string>
    <string name="empty_tips">加载不到数据</string>
</resources>
